<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/background">

    <TextView 
        android:id="@+id/headline" 
        android:text="@string/headline" 
        android:background="#000000"
        android:textSize="14px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    ></TextView>
    
	<EditText android:id="@+id/contact"    
	    android:text="Choose contact"
		android:textSize="18px" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:textColor="#AAAAAA"
		android:paddingTop="3dip"
		android:inputType="textPersonName"
		/>

    
    <TextView 
        android:id="@+id/creadit_of" 
        android:text="@string/credit_of" 
        android:background="#000000"
        android:textSize="14px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    ></TextView>
    
	<EditText android:id="@+id/value" 
	    android:text="0.0EUR"
		android:textSize="20px" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#AAAAAA" 
		android:paddingTop="6dip"
		android:inputType="numberDecimal"
	/>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="fill_parent">


		<Button android:id="@+id/debit" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/credit"
			android:gravity="left" />

		<Button android:id="@+id/credit" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/debit"
			android:gravity="center_horizontal" />

		<Button android:id="@+id/credit" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/cancel"
			android:gravity="right" />

	</LinearLayout>
</LinearLayout>
